--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.896.0",
     "@aws-sdk/client-s3": "^3.583.0",
     "@aws-sdk/client-secrets-manager": "^3.896.0",
+    "@aws-sdk/client-sqs": "^3.906.0",
     "@aws-sdk/client-ssm": "^3.896.0",
     "@aws-sdk/s3-request-presigner": "^3.583.0",
     "aws-jwt-verify": "^5.1.0",
