--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-jwt-verify": "^5.1.0",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
